// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanDoc concat string & flat concat 1`] = `
Object {
  "break": false,
  "contents": Object {
    "parts": Array [
      Object {
        "break": false,
        "contents": "1",
        "expandedStates": undefined,
        "id": undefined,
        "type": "group",
      },
      "23",
      Object {
        "break": false,
        "contents": "4",
        "expandedStates": undefined,
        "id": undefined,
        "type": "group",
      },
      "5678",
      Object {
        "break": false,
        "contents": "9",
        "expandedStates": undefined,
        "id": undefined,
        "type": "group",
      },
      "1011",
    ],
    "type": "concat",
  },
  "expandedStates": undefined,
  "id": undefined,
  "type": "group",
}
`;

exports[`cleanDoc empty group 1`] = `
Object {
  "parts": Array [
    Object {
      "break": false,
      "contents": "_",
      "expandedStates": undefined,
      "id": "id",
      "type": "group",
    },
    Object {
      "break": true,
      "contents": "_",
      "expandedStates": undefined,
      "id": undefined,
      "type": "group",
    },
    Object {
      "break": false,
      "contents": "_",
      "expandedStates": Array [
        "_",
      ],
      "id": undefined,
      "type": "group",
    },
  ],
  "type": "concat",
}
`;

exports[`cleanDoc fill 1`] = `
Object {
  "parts": Array [
    Object {
      "parts": Array [
        "1",
      ],
      "type": "fill",
    },
    Object {
      "parts": Array [
        "2",
        "3",
      ],
      "type": "fill",
    },
  ],
  "type": "concat",
}
`;

exports[`cleanDoc nested group 1`] = `
Object {
  "break": false,
  "contents": "_",
  "expandedStates": undefined,
  "id": undefined,
  "type": "group",
}
`;

exports[`cleanDoc removes empty align/indent/line-suffix 1`] = `"_"`;

exports[`cleanDoc removes empty string/concat 1`] = `"_"`;
